force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>ssot__AnnualIncome__c</fullName>
    <label>Annual Income</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AnnualIncome</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>