force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__DescriptionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__DescriptionText__c</fullName>
    <label>Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DescriptionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>