force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__EmployerAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployerAddressLine1__c</fullName>
    <label>Employer Address Line 1</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployerAddressLine1</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>