force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__EmployerAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployerAddressLine2__c</fullName>
    <label>Employer Address Line 2</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployerAddressLine2</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>