force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__EmployerContactPointAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployerContactPointAddressId__c</fullName>
    <label>Employer Contact Point Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployerContactPointAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>