force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__EmploymentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmploymentType__c</fullName>
    <label>Employment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmploymentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>