force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__PositionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositionText__c</fullName>
    <label>Position Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>