force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__rel_1719819735399_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819735399_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonEmployment_EmployerContactPoin_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>PersonEmployment_EmployerContactPoin_rel</relationshipLabel>
    <relationshipName>rel_1719819735399_end</relationshipName>
    <type>Lookup</type>
</CustomField>