force-app/main/default/objects/ssot__PersonEmployment__dlm/fields/ssot__rel_1720291161748_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291161748_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonEmployment_IndividualId_map_In_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonEmployment_IndividualId_map_In_rel</relationshipLabel>
    <relationshipName>rel_1720291161748_end</relationshipName>
    <type>Lookup</type>
</CustomField>